apply java formatting